@@ -80,6 +80,7 @@ a.crumb:hover			{color:var(--base15);}
 a.about_data			{color:var(--base14);}
 a.about_data:hover		{color:var(--base15);}
 a.about_data.quality	{border-left:1px solid var(--base11);}
+a.about_data.registry_link	{border-right:1px solid var(--base11);}
 
 
 /*	Header styles
