@@ -1,3 +1,8 @@
+Development Portal (2018-06-11 shi)
+==============================
+Remove indicator numbers for results in SAVi
+
+
 Development Portal (2018-05-25 shi)
 ==============================
 Fix table (list and activity) word break
